--- a/src/components/header/mobile/mobile.css
+++ b/src/components/header/mobile/mobile.css
@@ -1,5 +1,5 @@
 .mobile {
-    background-color: #e0e0e0;
+    background-color: #fefed2;
     height: 100vh;
     width: 60vw;
     position: absolute;
